syntax = "proto3";

package lightwalletrpc;

message Empty {}

message BlockHeader {
    string hash = 1;
    int32 height = 2;
    int64 time = 3;
    string prevBlockHash = 4;
}

message Outpoint {
    string hash = 1;
    uint32 index = 2;
}

message TxOut {
    string scriptPubkey = 1;
    int64 value = 2;
}

message TxID {
    string txid = 1;
}

message BlockHash {
    string hash = 1;
}

message HexEncoded {
    string hash = 1;
}

message Height {
    int32 height = 1;
}

